--- a/deployment.yaml
+++ b/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sample-app
+  annotations:
+    flux.io/automated: 'true'
 spec:
   replicas: 1
   revisionHistoryLimit: 3
